--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,94 @@
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:background">@android:color/transparent</item>
     </style>
+
+    <style name="Scroller">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="ScrollerContainer" parent="Scroller">
+        <item name="android:orientation">vertical</item>
+        <item name="android:paddingLeft">24dp</item>
+        <item name="android:paddingRight">24dp</item>
+    </style>
+
+    <style name="ScrollerContainerSpinner">
+        <item name="android:layout_gravity">right</item>
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_marginBottom">24dp</item>
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:popupBackground">@color/item_bg</item>
+        <item name="android:dropDownVerticalOffset">50dp</item>
+        <item name="android:background">@drawable/sorting_bg</item>
+        <item name="android:entries">@array/sorting</item>
+    </style>
+
+    <style name="Characters">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/item_bg</item>
+        <item name="android:orientation">horizontal</item>
+    </style>
+
+    <style name="CharactersIco">
+        <item name="android:layout_width">116dp</item>
+        <item name="android:layout_height">116dp</item>
+        <item name="android:layout_margin">12dp</item>
+    </style>
+
+    <style name="CharactersContainerContent">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:layout_margin">12dp</item>
+    </style>
+
+    <style name="CharactersText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/text</item>
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="CharactersStarRate">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/text</item>
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Gacha">
+        <item name="android:background">@drawable/item_bg</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:padding">12dp</item>
+    </style>
+
+    <style name="GachaImage">
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">150dp</item>
+    </style>
+
+    <style name="GachaTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/text</item>
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="GachaDescription">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/text</item>
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
