added splash screen, backgrounds and icons

--- a/app/src/main/res/drawable/sorting_bg.xml
+++ b/app/src/main/res/drawable/sorting_bg.xml
@@ -3,11 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="10dp"/>
-            <solid android:color="@color/window_light_bg"/>
+            <solid  android:color="@color/nav_fg"/>
         </shape>
     </item>
-
-    <item
-        android:drawable="@drawable/ic_logo"
-        android:gravity="center"/>
 </layer-list>
