--- a/app/src/main/res/drawable/ic_about.xml
+++ b/app/src/main/res/drawable/ic_about.xml
@@ -1,4 +1,4 @@
 <vector android:height="32dp" android:viewportHeight="20"
     android:viewportWidth="20" android:width="32dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/nav_fg" android:fillType="evenOdd" android:pathData="M18,10a8,8 0,1 1,-16 0,8 8,0 0,1 16,0zM11,6a1,1 0,1 1,-2 0,1 1,0 0,1 2,0zM9,9a1,1 0,0 0,0 2v3a1,1 0,0 0,1 1h1a1,1 0,1 0,0 -2v-3a1,1 0,0 0,-1 -1L9,9z"/>
+    <path android:fillColor="#000" android:fillType="evenOdd" android:pathData="M18,10a8,8 0,1 1,-16 0,8 8,0 0,1 16,0zM11,6a1,1 0,1 1,-2 0,1 1,0 0,1 2,0zM9,9a1,1 0,0 0,0 2v3a1,1 0,0 0,1 1h1a1,1 0,1 0,0 -2v-3a1,1 0,0 0,-1 -1L9,9z"/>
 </vector>
