--- a/app/src/main/res/drawable/ic_dictionary.xml
+++ b/app/src/main/res/drawable/ic_dictionary.xml
@@ -2,6 +2,6 @@
     android:viewportWidth="24" android:width="32dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#00000000"
         android:pathData="M3,5h12M9,3v2m1.048,9.5A18.022,18.022 0,0 1,6.412 9m6.088,9h7M11,21l5,-10 5,10M12.751,5C11.783,10.77 8.07,15.61 3,18.129"
-        android:strokeColor="@color/nav_fg" android:strokeLineCap="round"
+        android:strokeColor="#000" android:strokeLineCap="round"
         android:strokeLineJoin="round" android:strokeWidth="2"/>
 </vector>
