--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,25 +1,28 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
-        <item name="android:navigationBarColor">@color/nav_bg</item>
-<!--        <item name="android:colorControlNormal">@color/nav_fg</item>-->
-        <item name="android:windowBackground">@color/window_bg</item>
+<resources>
+
+    <style name="AppTheme.Light" parent="Theme.AppCompat">
         <item name="windowNoTitle">true</item>
-<!--        <item name="android:windowFullscreen">true</item>-->
+        <item name="windowActionBar">false</item>
+        <item name="android:windowBackground">@color/window_light_bg</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:navigationBarColor">@color/window_light_bg</item>
+        <item name="android:textColor">@android:color/black</item>
     </style>
 
-    <style name="AppTheme.Launch">
-        <item name="android:windowBackground">@drawable/splash_screen</item>
+    <style name="AppTheme.Light.Launch">
+        <item name="android:windowBackground">@drawable/light_splash_screen</item>
+    </style>
+
+    <style name="AppTheme.Dark" parent="Theme.AppCompat">
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowBackground">@color/window_dark_bg</item>
+        <item name="android:navigationBarColor">@color/window_dark_bg</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:textColor">#DDD</item>
+    </style>
+
+    <style name="AppTheme.Dark.Launch">
+        <item name="android:windowBackground">@drawable/dark_splash_screen</item>
     </style>
 </resources>
