--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="window_bg">#E5E7EB</color>
-    <color name="nav_bg">#F3F4F6</color>
-    <color name="nav_fg">#4F46E5</color>
-    <color name="item_bg">#F9FAFB</color>
 
+    <color name="window_light_bg">#E5E7EB</color>
+    <color name="window_dark_bg">#1F2937</color>
+    <color name="nav_bg">#F3F4F6</color>
+    <color name="item_bg">#F9FAFB</color>
+    <color name="logo_color">#4F46E5</color>
+    <color name="nav_fg">#4F46E5</color>
+    <color name="sort_btn_bg">#4F46E5</color>
+
+    <color name="text">#000</color>
+    <color name="text_description">#6B7280</color>
 
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
