--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -13,206 +13,11 @@
                 android:id="@+id/sort"
                 style="@style/ScrollerContainerSpinner"/>
 
-            <LinearLayout style="@style/Characters">
-
-                <ImageView
-                    style="@style/CharactersIco"
-                    android:src="@mipmap/tartaglia" />
-
-                <LinearLayout style="@style/CharactersContainerContent">
-
-                    <TextView
-                        style="@style/CharactersText"
-                        android:text="Тарталья" />
-
-                    <TextView
-                        style="@style/CharactersStarRate"
-                        android:text="5*" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Characters">
-
-                <ImageView
-                    style="@style/CharactersIco"
-                    android:src="@mipmap/tartaglia" />
-
-                <LinearLayout style="@style/CharactersContainerContent">
-
-                    <TextView
-                        style="@style/CharactersText"
-                        android:text="Тарталья" />
-
-                    <TextView
-                        style="@style/CharactersStarRate"
-                        android:text="5*" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Characters">
-
-                <ImageView
-                    style="@style/CharactersIco"
-                    android:src="@mipmap/tartaglia" />
-
-                <LinearLayout style="@style/CharactersContainerContent">
-
-                    <TextView
-                        style="@style/CharactersText"
-                        android:text="Тарталья" />
-
-                    <TextView
-                        style="@style/CharactersStarRate"
-                        android:text="5*" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Characters">
-
-                <ImageView
-                    style="@style/CharactersIco"
-                    android:src="@mipmap/tartaglia" />
-
-                <LinearLayout style="@style/CharactersContainerContent">
-
-                    <TextView
-                        style="@style/CharactersText"
-                        android:text="Тарталья" />
-
-                    <TextView
-                        style="@style/CharactersStarRate"
-                        android:text="5*" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Characters">
-
-                <ImageView
-                    style="@style/CharactersIco"
-                    android:src="@mipmap/tartaglia" />
-
-                <LinearLayout style="@style/CharactersContainerContent">
-
-                    <TextView
-                        style="@style/CharactersText"
-                        android:text="Тарталья" />
-
-                    <TextView
-                        style="@style/CharactersStarRate"
-                        android:text="5*" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Characters">
-
-                <ImageView
-                    style="@style/CharactersIco"
-                    android:src="@mipmap/tartaglia" />
-
-                <LinearLayout style="@style/CharactersContainerContent">
-
-                    <TextView
-                        style="@style/CharactersText"
-                        android:text="Тарталья" />
-
-                    <TextView
-                        style="@style/CharactersStarRate"
-                        android:text="5*" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Characters">
-
-                <ImageView
-                    style="@style/CharactersIco"
-                    android:src="@mipmap/tartaglia" />
-
-                <LinearLayout style="@style/CharactersContainerContent">
-
-                    <TextView
-                        style="@style/CharactersText"
-                        android:text="Тарталья" />
-
-                    <TextView
-                        style="@style/CharactersStarRate"
-                        android:text="5*" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Characters">
-
-                <ImageView
-                    style="@style/CharactersIco"
-                    android:src="@mipmap/tartaglia" />
-
-                <LinearLayout style="@style/CharactersContainerContent">
-
-                    <TextView
-                        style="@style/CharactersText"
-                        android:text="Тарталья" />
-
-                    <TextView
-                        style="@style/CharactersStarRate"
-                        android:text="5*" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Characters">
-
-                <ImageView
-                    style="@style/CharactersIco"
-                    android:src="@mipmap/tartaglia" />
-
-                <LinearLayout style="@style/CharactersContainerContent">
-
-                    <TextView
-                        style="@style/CharactersText"
-                        android:text="Тарталья" />
-
-                    <TextView
-                        style="@style/CharactersStarRate"
-                        android:text="5*" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Characters">
-
-                <ImageView
-                    style="@style/CharactersIco"
-                    android:src="@mipmap/tartaglia" />
-
-                <LinearLayout style="@style/CharactersContainerContent">
-
-                    <TextView
-                        style="@style/CharactersText"
-                        android:text="Тарталья" />
-
-                    <TextView
-                        style="@style/CharactersStarRate"
-                        android:text="5*" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
+            <include layout="@layout/model_characters"/>
+            <include layout="@layout/model_characters"/>
+            <include layout="@layout/model_characters"/>
+            <include layout="@layout/model_characters"/>
+            <include layout="@layout/model_characters"/>
 
         </LinearLayout>
 
