--- a/app/src/main/res/layout/fragment_gacha.xml
+++ b/app/src/main/res/layout/fragment_gacha.xml
@@ -13,214 +13,11 @@
                 android:id="@+id/sort_gacha"
                 style="@style/ScrollerContainerSpinner"/>
 
-            <LinearLayout style="@style/Gacha">
-
-                <ImageView
-                    style="@style/GachaImage"
-                    android:src="@mipmap/eola" />
-
-                <TextView
-                    style="@style/GachaTitle"
-                    android:text="@string/title" />
-
-                <TextView
-                    style="@style/GachaDescription"
-                    android:text="@string/description" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Gacha">
-
-                <ImageView
-                    style="@style/GachaImage"
-                    android:src="@mipmap/eola" />
-
-                <TextView
-                    style="@style/GachaTitle"
-                    android:text="@string/title" />
-
-                <TextView
-                    style="@style/GachaDescription"
-                    android:text="@string/description" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Gacha">
-
-                <ImageView
-                    style="@style/GachaImage"
-                    android:src="@mipmap/eola" />
-
-                <TextView
-                    style="@style/GachaTitle"
-                    android:text="@string/title" />
-
-                <TextView
-                    style="@style/GachaDescription"
-                    android:text="@string/description" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Gacha">
-
-                <ImageView
-                    style="@style/GachaImage"
-                    android:src="@mipmap/eola" />
-
-                <TextView
-                    style="@style/GachaTitle"
-                    android:text="@string/title" />
-
-                <TextView
-                    style="@style/GachaDescription"
-                    android:text="@string/description" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Gacha">
-
-                <ImageView
-                    style="@style/GachaImage"
-                    android:src="@mipmap/eola" />
-
-                <TextView
-                    style="@style/GachaTitle"
-                    android:text="@string/title" />
-
-                <TextView
-                    style="@style/GachaDescription"
-                    android:text="@string/description" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Gacha">
-
-                <ImageView
-                    style="@style/GachaImage"
-                    android:src="@mipmap/eola" />
-
-                <TextView
-                    style="@style/GachaTitle"
-                    android:text="@string/title" />
-
-                <TextView
-                    style="@style/GachaDescription"
-                    android:text="@string/description" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Gacha">
-
-                <ImageView
-                    style="@style/GachaImage"
-                    android:src="@mipmap/eola" />
-
-                <TextView
-                    style="@style/GachaTitle"
-                    android:text="@string/title" />
-
-                <TextView
-                    style="@style/GachaDescription"
-                    android:text="@string/description" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Gacha">
-
-                <ImageView
-                    style="@style/GachaImage"
-                    android:src="@mipmap/eola" />
-
-                <TextView
-                    style="@style/GachaTitle"
-                    android:text="@string/title" />
-
-                <TextView
-                    style="@style/GachaDescription"
-                    android:text="@string/description" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Gacha">
-
-                <ImageView
-                    style="@style/GachaImage"
-                    android:src="@mipmap/eola" />
-
-                <TextView
-                    style="@style/GachaTitle"
-                    android:text="@string/title" />
-
-                <TextView
-                    style="@style/GachaDescription"
-                    android:text="@string/description" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Gacha">
-
-                <ImageView
-                    style="@style/GachaImage"
-                    android:src="@mipmap/eola" />
-
-                <TextView
-                    style="@style/GachaTitle"
-                    android:text="@string/title" />
-
-                <TextView
-                    style="@style/GachaDescription"
-                    android:text="@string/description" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Gacha">
-
-                <ImageView
-                    style="@style/GachaImage"
-                    android:src="@mipmap/eola" />
-
-                <TextView
-                    style="@style/GachaTitle"
-                    android:text="@string/title" />
-
-                <TextView
-                    style="@style/GachaDescription"
-                    android:text="@string/description" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Gacha">
-
-                <ImageView
-                    style="@style/GachaImage"
-                    android:src="@mipmap/eola" />
-
-                <TextView
-                    style="@style/GachaTitle"
-                    android:text="@string/title" />
-
-                <TextView
-                    style="@style/GachaDescription"
-                    android:text="@string/description" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Gacha">
-
-                <ImageView
-                    style="@style/GachaImage"
-                    android:src="@mipmap/eola" />
-
-                <TextView
-                    style="@style/GachaTitle"
-                    android:text="@string/title" />
-
-                <TextView
-                    style="@style/GachaDescription"
-                    android:text="@string/description" />
-
-            </LinearLayout>
-
+            <include layout="@layout/model_gacha"/>
+            <include layout="@layout/model_gacha"/>
+            <include layout="@layout/model_gacha"/>
+            <include layout="@layout/model_gacha"/>
+            <include layout="@layout/model_gacha"/>
 
         </LinearLayout>
 
