--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -11,17 +11,11 @@
             android:padding="12dp"
             style="@style/ScrollerContainer">
 
-            <TextView
-                style="@style/DictionaryTitle"
-                android:text="biat"/>
-            
-            <TextView
-                style="@style/DictionaryContent"
-                android:text="[int] Damn it [v] fuck"/>
-            
-            <TextView
-                style="@style/DictionaryDescription"
-                android:text="Russian: Блять(blyad') (Damn it)"/>
+            <include layout="@layout/model_dictionary"/>
+            <include layout="@layout/model_dictionary"/>
+            <include layout="@layout/model_dictionary"/>
+            <include layout="@layout/model_dictionary"/>
+            <include layout="@layout/model_dictionary"/>
 
         </LinearLayout>
 
