--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingHorizontal="24dp"
     tools:context=".MainFragment">
 
-    <ScrollView style="@style/Scroller">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/main_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <LinearLayout style="@style/ScrollerContainer">
+    </androidx.recyclerview.widget.RecyclerView>
 
-            <include layout="@layout/model_main"/>
-            <include layout="@layout/model_main"/>
-            <include layout="@layout/model_main"/>
-            <include layout="@layout/model_main"/>
-            <include layout="@layout/model_main"/>
-
-        </LinearLayout>
-
-    </ScrollView>
-
-</FrameLayout>
+</LinearLayout>
