added RecycletView for dictionary fragment and fixed UI bag in main fragment

--- a/app/src/main/res/values/style_dictionary.xml
+++ b/app/src/main/res/values/style_dictionary.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <style name="Dictionary">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">24dp</item>
+        <item name="android:layout_marginRight">24dp</item>
         <item name="android:orientation">vertical</item>
     </style>
 
@@ -25,5 +26,4 @@
         <item name="android:textColor">@color/text_description</item>
         <item name="android:textSize">15sp</item>
     </style>
-
 </resources>
