--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -1,24 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DictionaryFragment">
 
-    <ScrollView style="@style/Scroller">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/dictionary_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <LinearLayout 
-            android:padding="12dp"
-            style="@style/ScrollerContainer">
+    </androidx.recyclerview.widget.RecyclerView>
 
-            <include layout="@layout/model_dictionary"/>
-            <include layout="@layout/model_dictionary"/>
-            <include layout="@layout/model_dictionary"/>
-            <include layout="@layout/model_dictionary"/>
-            <include layout="@layout/model_dictionary"/>
-
-        </LinearLayout>
-
-    </ScrollView>
-
-</FrameLayout>
+</LinearLayout>
