--- a/app/src/main/res/values/style_main.xml
+++ b/app/src/main/res/values/style_main.xml
@@ -5,6 +5,8 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">100dp</item>
         <item name="android:orientation">horizontal</item>
+        <item name="android:layout_marginLeft">24dp</item>
+        <item name="android:layout_marginRight">24dp</item>
         <item name="android:background">@drawable/item_bg</item>
         <item name="android:layout_marginBottom">12dp</item>
     </style>
