--- a/app/src/main/res/values/style_gacha.xml
+++ b/app/src/main/res/values/style_gacha.xml
@@ -4,9 +4,11 @@
     <style name="Gacha">
         <item name="android:background">@drawable/item_bg</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">vertical</item>
         <item name="android:padding">12dp</item>
+        <item name="android:layout_marginLeft">24dp</item>
+        <item name="android:layout_marginRight">24dp</item>
         <item name="android:layout_marginBottom">12dp</item>
     </style>
 
