--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CharactersFragment">
+    tools:context=".fragments.CharactersFragment">
 
     <Spinner
         android:id="@+id/sort"
