--- a/app/src/main/res/layout/fragment_gacha.xml
+++ b/app/src/main/res/layout/fragment_gacha.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".GachaFragment">
+    tools:context=".fragments.GachaFragment">
 
     <Spinner
         android:id="@+id/sort_gacha"
