--- a/app/src/main/res/drawable/item_bg.xml
+++ b/app/src/main/res/drawable/item_bg.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="15dp"/>
-            <solid android:color="@color/item_bg"/>
+            <solid android:color="?itemFillColor"/>
         </shape>
     </item>
 </layer-list>
