--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="?android:windowBackground"/>
+    <item android:drawable="@color/window_dark_bg"/>
     <item android:drawable="@drawable/ic_logo"
         android:gravity="center"
         android:width="200dp"
