--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -7,18 +7,28 @@
 
     <ScrollView style="@style/Scroller">
 
+
         <LinearLayout style="@style/ScrollerContainer">
+            <Button
+                android:id="@+id/toggler"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="12dp"
+                android:text="Сменить тему"
+                android:textAllCaps="false"
+                android:background="@drawable/sorting_bg"/>
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="350dp"
-                android:src="@mipmap/about"/>
+                android:src="@mipmap/about" />
 
             <LinearLayout style="@style/About">
 
                 <TextView
                     style="@style/AboutTitle"
-                    android:text="@string/about_title"/>
+                    android:text="@string/about_title" />
 
                 <TextView
                     style="@style/AboutContent"
