--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,17 +19,231 @@
         <item name="android:paddingRight">24dp</item>
     </style>
 
-    <style name="ScrollerContainerSpinner">
+    <style name="Spinner">
         <item name="android:layout_gravity">right</item>
         <item name="android:layout_width">150dp</item>
         <item name="android:layout_height">40dp</item>
         <item name="android:layout_marginBottom">24dp</item>
         <item name="android:layout_marginTop">12dp</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:popupBackground">@color/item_bg</item>
         <item name="android:dropDownVerticalOffset">50dp</item>
         <item name="android:background">@drawable/sorting_bg</item>
         <item name="android:entries">@array/sorting</item>
+    </style>
+
+    <style name="Main">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">100dp</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:layout_marginLeft">24dp</item>
+        <item name="android:layout_marginRight">24dp</item>
+        <item name="android:background">@drawable/item_bg</item>
+        <item name="android:layout_marginBottom">12dp</item>
+    </style>
+
+    <style name="MainImage">
+        <item name="android:layout_width">76dp</item>
+        <item name="android:layout_height">76dp</item>
+        <item name="android:layout_margin">12dp</item>
+    </style>
+
+    <style name="MainTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_marginLeft">24dp</item>
+        <item name="fontFamily">@font/inter_val</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Gacha">
+        <item name="android:background">@drawable/item_bg</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:layout_marginLeft">24dp</item>
+        <item name="android:layout_marginRight">24dp</item>
+        <item name="android:layout_marginBottom">12dp</item>
+    </style>
+
+    <style name="Star">
+<!--        <item name="android:layout_width">wrap_content</item>-->
+        <item name="android:layout_height">23sp</item>
+        <item name="android:layout_width">23sp</item>
+        <item name="android:fillColor">?android:textColor</item>
+        <item name="android:src">@drawable/star</item>
+    </style>
+
+    <style name="GachaImage">
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">150dp</item>
+    </style>
+
+    <style name="GachaText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="GachaTextSmall" parent="GachaText">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="GachaTextStar" parent="GachaTextSmall">
+        <item name="android:layout_marginLeft">5dp</item>
+    </style>
+
+    <style name="Dictionary">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">24dp</item>
+        <item name="android:layout_marginRight">24dp</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="DictionaryTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="DictionaryContent">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="DictionaryDescription">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/text_description</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="Character">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/item_bg</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:layout_marginLeft">24dp</item>
+        <item name="android:layout_marginRight">24dp</item>
+        <item name="android:layout_marginBottom">12dp</item>
+    </style>
+
+    <style name="CharactersIcon">
+        <item name="android:layout_width">116dp</item>
+        <item name="android:layout_height">116dp</item>
+        <item name="android:layout_margin">12dp</item>
+    </style>
+
+    <style name="CharactersContainerContent">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:layout_margin">12dp</item>
+    </style>
+
+    <style name="CharactersText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="CharactersStarRate">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="CharacterImage">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">320dp</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_marginBottom">24dp</item>
+    </style>
+
+    <style name="CharacterSkillsContainer">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/item_bg</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:layout_marginBottom">12dp</item>
+        <item name="android:padding">12dp</item>
+    </style>
+
+    <style name="CharacterName">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="CharacterSkills">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="CharacterDescription">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/item_bg</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:padding">12dp</item>
+    </style>
+
+    <style name="CharacterTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="CharacterContent">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="About">
+        <item name="android:background">@drawable/item_bg</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:padding">24dp</item>
+        <item name="android:layout_margin">12dp</item>
+    </style>
+
+    <style name="AboutTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="AboutContent">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="AboutDescription">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/text_description</item>
+        <item name="android:fontFamily">@font/inter_val</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">13sp</item>
     </style>
 
 </resources>
